--- a/app/src/main/res/drawable/edittext_gray.xml
+++ b/app/src/main/res/drawable/edittext_gray.xml
@@ -9,6 +9,6 @@
         android:topRightRadius="5dp" /> <!-- 테두리 색깔 -->
     <stroke
         android:width="1dp"
-        android:color="#DADADA" />
+        android:color="#E4E4E4" />
 
 </shape>
