--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -1,209 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:id="@+id/dlout_stopwatch"
     android:layout_height="match_parent"
-    tools:context=".StopWatchActivity">
+    android:layout_width="match_parent">
 
-    <LinearLayout
-        android:id="@+id/lout_option"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:gravity="right"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:textColor="#000000"
-            android:background="#00FFFFFF"
-            android:id="@+id/btn_alarmOption"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="30dp"
-            android:text=":"/>
-
-    </LinearLayout>
-
-
-
-
-    <TextView
-        app:layout_constraintTop_toBottomOf="@id/lout_option"
-        app:layout_constraintBottom_toTopOf="@id/lout_record_viewer_top"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/tv_stopwatch_viewer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:text="00:00:00"
-        android:textSize="56dp"
-        android:textColor="@color/black"
-        android:textFontWeight="200"
-        android:layout_marginBottom="20dp"/>
-
-    <LinearLayout
-        android:background="@drawable/border_bottom_gray_thin"
-        android:layout_marginRight="52dp"
-        android:layout_marginLeft="52dp"
-        android:paddingBottom="10dp"
-        android:textSize="24dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
-        app:layout_constraintBottom_toTopOf="@id/sv_record_viewer_bottom"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/lout_record_viewer_top"
-        app:layout_constraintHeight_percent="0.05"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        tools:context=".StopWatchActivity">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="2"
-            android:id="@+id/lout_interval_top"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="구간"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:id="@+id/lout_split_record_top"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="구간 기록"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:id="@+id/lout_course_record_top"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="전체 시간"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <ScrollView
-        android:scrollbars="none"
-        android:background="#00FFFFFF"
-        android:layout_marginRight="52dp"
-        android:layout_marginLeft="52dp"
-        android:textSize="24dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
-        app:layout_constraintBottom_toTopOf="@id/lout_record_start"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/sv_record_viewer_bottom"
-        app:layout_constraintHeight_percent="0.45"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <LinearLayout
-            android:layout_marginTop="24dp"
-            android:id="@+id/lout_record_viewer_bottom"
+            android:id="@+id/lout_option"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <Button
+                android:textColor="#000000"
+                android:background="#00FFFFFF"
+                android:id="@+id/btn_stopWatch_option"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:textSize="30dp"
+                android:text=":"/>
+
+        </LinearLayout>
+
+
+
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/lout_option"
+            app:layout_constraintBottom_toTopOf="@id/lout_record_viewer_top"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/tv_stopwatch_viewer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:text="00:00:00"
+            android:textSize="56dp"
+            android:textColor="@color/black"
+            android:textFontWeight="200"
+            android:layout_marginBottom="20dp"/>
+
+        <LinearLayout
+            android:background="@drawable/border_bottom_gray_thin"
+            android:layout_marginRight="52dp"
+            android:layout_marginLeft="52dp"
+            android:paddingBottom="10dp"
+            android:textSize="24dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
+            app:layout_constraintBottom_toTopOf="@id/sv_record_viewer_bottom"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/lout_record_viewer_top"
+            app:layout_constraintHeight_percent="0.05"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_weight="2"
-                android:id="@+id/lout_interval"
+                android:id="@+id/lout_interval_top"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="18dp"
-                    android:gravity="center"
-                    android:id="@+id/tv_interval"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="구간"/>
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_weight="3"
-                android:id="@+id/lout_split_record"
+                android:id="@+id/lout_split_record_top"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="18dp"
-                    android:gravity="center"
-                    android:id="@+id/tv_interval_record"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="구간 기록"/>
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_weight="3"
-                android:id="@+id/lout_course_record"
+                android:id="@+id/lout_course_record_top"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="18dp"
-                    android:gravity="center"
-                    android:id="@+id/tv_course_record"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="전체 시간"/>
             </LinearLayout>
 
         </LinearLayout>
 
-    </ScrollView>
-
-
-
-    <LinearLayout
-        android:layout_marginBottom="80dp"
-        android:id="@+id/lout_record_start"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/btn_record_init"
-            android:textSize="18dp"
-            android:layout_marginLeft="52dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/btn_gray"
-            android:textColor="#6C6C6C"
-            android:layout_weight="1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="구간 기록"/>
-
-        <Button
-            style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/btn_start_pause_resume"
-            android:textSize="18dp"
+        <ScrollView
+            android:scrollbars="none"
+            android:background="#00FFFFFF"
             android:layout_marginRight="52dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/btn_blue"
-            android:textColor="#FFFFFF"
-            android:layout_weight="1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="시작"/>
-    </LinearLayout>
+            android:layout_marginLeft="52dp"
+            android:textSize="24dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
+            app:layout_constraintBottom_toTopOf="@id/lout_record_start"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/sv_record_viewer_bottom"
+            app:layout_constraintHeight_percent="0.45"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+            <LinearLayout
+                android:layout_marginTop="24dp"
+                android:id="@+id/lout_record_viewer_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="2"
+                    android:id="@+id/lout_interval"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:textSize="18dp"
+                        android:gravity="center"
+                        android:id="@+id/tv_interval"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="3"
+                    android:id="@+id/lout_split_record"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:textSize="18dp"
+                        android:gravity="center"
+                        android:id="@+id/tv_interval_record"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="3"
+                    android:id="@+id/lout_course_record"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:textSize="18dp"
+                        android:gravity="center"
+                        android:id="@+id/tv_course_record"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+
+
+        <LinearLayout
+            android:layout_marginBottom="80dp"
+            android:id="@+id/lout_record_start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/btn_record_init"
+                android:textSize="18dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/btn_gray"
+                android:textColor="#6C6C6C"
+                android:layout_weight="1"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="구간 기록"/>
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/btn_start_pause_resume"
+                android:textSize="18dp"
+                android:layout_marginRight="52dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/btn_blue"
+                android:textColor="#FFFFFF"
+                android:layout_weight="1"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="시작"/>
+        </LinearLayout>
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/activity_drawer"/>
+</androidx.drawerlayout.widget.DrawerLayout>
